--- a/akhi-way/src/locales/ar/translation.json
+++ b/akhi-way/src/locales/ar/translation.json
@@ -1,14 +1,65 @@
 {
-  "Upcoming Meetups": "اللقاءات القادمة",
-  "Restaurant": "مطعم",
-  "Date": "تاريخ",
-  "Time": "وقت",
-  "Friends": "أصدقاء",
-  "No meetups scheduled.": "لا توجد لقاءات مجدولة.",
-  "Plan a New Meetup": "تخطيط لقاء جديد",
-  "Previous": "السابق",
-  "Next": "التالي",
-  "Submit": "إرسال",
+  "Reviews": "التعليقات",
+  "How would you rate your experience?": "كيف تقيم تجربتك؟",
+  "What did you order?": "ماذا طلبت؟",
+  "Write your review": "اكتب تعليقك",
+  "Enter text": "ادخل النص",
+  "SUBMIT REVIEW": "إرسال التعليق",
+  "UPDATE REVIEW": "تحديث التعليق",
+  "Please fill in all fields.": "يرجى ملء جميع الحقول.",
+  "Review submitted successfully!": "تم إرسال التعليق بنجاح!",
+  "Review updated successfully!": "تم تحديث التعليق بنجاح!",
+  "Review deleted successfully!": "تم حذف التعليق بنجاح!",
+  "You can only edit your own reviews.": "يمكنك تحرير تعليقاتك فقط.",
+  "You can only delete your own reviews.": "يمكنك حذف تعليقاتك فقط.",
+  "Dined on": "تناولت الطعام في",
+  "Overall": "بشكل عام",
+  "Edit": "تحرير",
+  "Delete": "حذف",
+  "Search Restaurants": "ابحث عن المطاعم",
+  "Search by name or cuisine type": "ابحث بالاسم أو نوع المطبخ",
+  "Select Price Range": "اختر نطاق السعر",
+  "Search": "بحث",
+  "Clear Filters": "مسح الفلاتر",
+  "$": "$",
+  "$$": "$$",
+  "$$$": "$$$",
+  "$$$$": "$$$$",
+  "VIEW MENU": "عرض القائمة",
+  "Hide Reviews": "إخفاء التعليقات",
+  "Show Reviews": "عرض التعليقات",
+  "Restaurant not found": "المطعم غير موجود",
+  "Menu": "القائمة",
+  "Location": "الموقع",
+  "Hours of Operation": "ساعات العمل",
+  "Phone Number": "رقم الهاتف",
+  "The Akhi Way": "طريقة الأخي",
+  "Restaurants": "المطاعم",
+  "About Us": "معلومات عنا",
+  "Account": "الحساب",
+  "English": "الإنجليزية",
+  "Arabic": "العربية",
+  "Login": "تسجيل الدخول",
+  "Username:": "اسم المستخدم:",
+  "Password:": "كلمة المرور:",
+  "Invalid credentials": "بيانات اعتماد غير صالحة",
+  "We'll show you how to eat, the Akhi Way!": "سنعلمك كيفية تناول الطعام، طريقة الأخي!",
+  "Find halal restaurants near you": "اعثر على المطاعم الحلال بالقرب منك",
+  "Featured Restaurants": "المطاعم المميزة",
+  "Home": "الصفحة الرئيسية",
+  "Quick Links": "روابط سريعة",
+  "Contact Us": "اتصل بنا",
+  "Email:": "البريد الإلكتروني:",
+  "Phone:": "الهاتف:",
+  "Follow Us": "تابعنا",
+  "&copy; 2024 The Akhi Way": "&copy; 2024 طريقة الأخي",
+  "Previous Page": "الصفحة السابقة",
+  "Please log in to see your account.": "يرجى تسجيل الدخول لعرض حسابك.",
+  "Add Review": "إضافة تعليق",
+  "Our Top Picks for You": "أفضل اختياراتنا لك",
+  "Back to Home": "العودة إلى الصفحة الرئيسية",
+  "View Details": "عرض التفاصيل",
+  "Welcome to the Akhi Way": "مرحبًا بك في طريقة الأخي",
   "Restaurant cannot be empty.": "لا يمكن أن يكون المطعم فارغًا.",
   "Date cannot be empty.": "لا يمكن أن يكون التاريخ فارغًا.",
   "Date cannot be today or in the past.": "لا يمكن أن يكون التاريخ اليوم أو في الماضي.",
@@ -16,6 +67,55 @@
   "Friends' emails cannot be empty.": "لا يمكن أن تكون رسائل البريد الإلكتروني للأصدقاء فارغة.",
   "Please enter valid email addresses.": "يرجى إدخال عناوين بريد إلكتروني صالحة.",
   "Meetup saved and shared with friends!": "تم حفظ اللقاء ومشاركته مع الأصدقاء!",
-  "Are you sure you want to cancel this meetup? A cancellation email will be sent to all recipients.": "هل أنت متأكد أنك تريد إلغاء هذا اللقاء؟ سيتم إرسال بريد إلكتروني للإلغاء إلى جميع المستلمين.",
-  "Meetup cancelled and email notification sent to all friends.": "تم إلغاء اللقاء وإرسال إشعار بالبريد الإلكتروني إلى جميع الأصدقاء."
+  "Are you sure you want to cancel this meetup? A cancellation email will be sent to all recipients.": "هل أنت متأكد أنك تريد إلغاء هذا اللقاء؟ سيتم إرسال بريد إلكتروني بالإلغاء إلى جميع المستلمين.",
+  "Meetup cancelled and email notification sent to all friends.": "تم إلغاء اللقاء وتم إرسال إشعار بالبريد الإلكتروني إلى جميع الأصدقاء.",
+  "Upcoming Meetups": "اللقاءات القادمة",
+  "Restaurant": "مطعم",
+  "Date": "تاريخ",
+  "Time": "وقت",
+  "Friends": "أصدقاء",
+  "No meetups scheduled.": "لا توجد لقاءات مجدولة.",
+  "Plan a New Meetup": "خطط للقاء جديد",
+  "Enter restaurant name": "أدخل اسم المطعم",
+  "Select a date": "اختر تاريخًا",
+  "Select a time": "اختر وقتًا",
+  "Enter friends' emails, separated by commas": "أدخل رسائل البريد الإلكتروني للأصدقاء، مفصولة بفواصل",
+  "Previous": "السابق",
+  "Next": "التالي",
+  "Submit": "إرسال",
+  "Invalid credentials": "بيانات الاعتماد غير صالحة",
+  "Login": "تسجيل الدخول",
+  "Username": "اسم المستخدم",
+  "Password": "كلمة المرور",
+  "We'll show you how to eat, the Akhi Way!": "سنريك كيف تأكل على طريقة أخي!",
+  "Find halal restaurants near you": "ابحث عن مطاعم حلال بالقرب منك",
+  "Featured Restaurants": "المطاعم المميزة",
+  "Rating": "التقييم",
+  "The Akhi Way": "طريقة أخي",
+  "Quick Links": "روابط سريعة",
+  "Home": "الصفحة الرئيسية",
+  "Restaurants": "المطاعم",
+  "About Us": "معلومات عنا",
+  "Account": "الحساب",
+  "Contact Us": "اتصل بنا",
+  "Email": "البريد الإلكتروني",
+  "Phone": "الهاتف",
+  "Follow Us": "تابعنا",
+  "Dietary restrictions cannot be empty.": "القيود الغذائية لا يمكن أن تكون فارغة.",
+  "Preferred cuisines cannot be empty.": "المأكولات المفضلة لا يمكن أن تكون فارغة.",
+  "Calorie intake must be a positive number.": "يجب أن يكون استهلاك السعرات الحرارية رقمًا إيجابيًا.",
+  "Dietary preferences saved!": "تم حفظ التفضيلات الغذائية!",
+  "Dietary Preferences": "التفضيلات الغذائية",
+  "Dietary Restrictions": "القيود الغذائية",
+  "Preferred Cuisines": "المأكولات المفضلة",
+  "Calorie Intake": "استهلاك السعرات الحرارية",
+  "Save Dietary Preferences": "احفظ التفضيلات الغذائية",
+  "Saved Preferences": "التفضيلات المحفوظة",
+  "Back": "السابق",
+  "Account Settings": "إعدادات الحساب",
+  "Dietary Preferences": "التفضيلات الغذائية",
+  "Meetups": "لقاءات",
+  "About Us": "معلومات عنا",
+  "Welcome to The Akhi Way! We are passionate about bringing you the best halal dining experiences. Our mission is to connect you with top-notch restaurants that adhere to halal standards.": "مرحبًا بكم في The Akhi Way! نحن شغوفون بتقديم أفضل تجارب الطعام الحلال لكم. مهمتنا هي ربطكم بأفضل المطاعم التي تلتزم بمعايير الحلال.",
+  "Our team is dedicated to ensuring that you have access to a wide variety of halal options, from traditional cuisines to modern dishes. Whether you're planning a family gathering, organizing a meet-up with friends, or simply looking for a great meal, we've got you covered, the Akhi Way.": "فريقنا ملتزم بتقديم مجموعة واسعة من الخيارات الحلال لكم، من الأطباق التقليدية إلى الأطباق الحديثة. سواء كنت تخطط لجمع عائلي، أو تنظيم لقاء مع الأصدقاء، أو ببساطة تبحث عن وجبة رائعة، لقد قمنا بتغطية ذلك، بطريقة Akhi."
 }
