--- a/akhi-way/src/locales/en/translation.json
+++ b/akhi-way/src/locales/en/translation.json
@@ -1,14 +1,65 @@
 {
-  "Upcoming Meetups": "Upcoming Meetups",
-  "Restaurant": "Restaurant",
-  "Date": "Date",
-  "Time": "Time",
-  "Friends": "Friends",
-  "No meetups scheduled.": "No meetups scheduled.",
-  "Plan a New Meetup": "Plan a New Meetup",
-  "Previous": "Previous",
-  "Next": "Next",
-  "Submit": "Submit",
+  "Reviews": "Reviews",
+  "How would you rate your experience?": "How would you rate your experience?",
+  "What did you order?": "What did you order?",
+  "Write your review": "Write your review",
+  "Enter text": "Enter text",
+  "SUBMIT REVIEW": "SUBMIT REVIEW",
+  "UPDATE REVIEW": "UPDATE REVIEW",
+  "Please fill in all fields.": "Please fill in all fields.",
+  "Review submitted successfully!": "Review submitted successfully!",
+  "Review updated successfully!": "Review updated successfully!",
+  "Review deleted successfully!": "Review deleted successfully!",
+  "You can only edit your own reviews.": "You can only edit your own reviews.",
+  "You can only delete your own reviews.": "You can only delete your own reviews.",
+  "Dined on": "Dined on",
+  "Overall": "Overall",
+  "Edit": "Edit",
+  "Delete": "Delete",
+  "Search Restaurants": "Search Restaurants",
+  "Search by name or cuisine type": "Search by name or cuisine type",
+  "Select Price Range": "Select Price Range",
+  "Search": "Search",
+  "Clear Filters": "Clear Filters",
+  "$": "$",
+  "$$": "$$",
+  "$$$": "$$$",
+  "$$$$": "$$$$",
+  "VIEW MENU": "VIEW MENU",
+  "Hide Reviews": "Hide Reviews",
+  "Show Reviews": "Show Reviews",
+  "Restaurant not found": "Restaurant not found",
+  "Menu": "Menu",
+  "Location": "Location",
+  "Hours of Operation": "Hours of Operation",
+  "Phone Number": "Phone Number",
+  "The Akhi Way": "The Akhi Way",
+  "Restaurants": "Restaurants",
+  "About Us": "About Us",
+  "Account": "Account",
+  "English": "English",
+  "Arabic": "Arabic",
+  "Login": "Login",
+  "Username:": "Username:",
+  "Password:": "Password:",
+  "Invalid credentials": "Invalid credentials",
+  "We'll show you how to eat, the Akhi Way!": "We'll show you how to eat, the Akhi Way!",
+  "Find halal restaurants near you": "Find halal restaurants near you",
+  "Featured Restaurants": "Featured Restaurants",
+  "Home": "Home",
+  "Quick Links": "Quick Links",
+  "Contact Us": "Contact Us",
+  "Email:": "Email:",
+  "Phone:": "Phone:",
+  "Follow Us": "Follow Us",
+  "&copy; 2024 The Akhi Way": "&copy; 2024 The Akhi Way",
+  "Previous Page": "Previous Page",
+  "Please log in to see your account.": "Please log in to see your account.",
+  "Add Review": "Add Review",
+  "Our Top Picks for You": "Our Top Picks for You",
+  "Back to Home": "Back to Home",
+  "View Details": "View Details",
+  "Welcome to the Akhi Way": "Welcome to the Akhi Way",
   "Restaurant cannot be empty.": "Restaurant cannot be empty.",
   "Date cannot be empty.": "Date cannot be empty.",
   "Date cannot be today or in the past.": "Date cannot be today or in the past.",
@@ -17,5 +68,54 @@
   "Please enter valid email addresses.": "Please enter valid email addresses.",
   "Meetup saved and shared with friends!": "Meetup saved and shared with friends!",
   "Are you sure you want to cancel this meetup? A cancellation email will be sent to all recipients.": "Are you sure you want to cancel this meetup? A cancellation email will be sent to all recipients.",
-  "Meetup cancelled and email notification sent to all friends.": "Meetup cancelled and email notification sent to all friends."
+  "Meetup cancelled and email notification sent to all friends.": "Meetup cancelled and email notification sent to all friends.",
+  "Upcoming Meetups": "Upcoming Meetups",
+  "Restaurant": "Restaurant",
+  "Date": "Date",
+  "Time": "Time",
+  "Friends": "Friends",
+  "No meetups scheduled.": "No meetups scheduled.",
+  "Plan a New Meetup": "Plan a New Meetup",
+  "Enter restaurant name": "Enter restaurant name",
+  "Select a date": "Select a date",
+  "Select a time": "Select a time",
+  "Enter friends' emails, separated by commas": "Enter friends' emails, separated by commas",
+  "Previous": "Previous",
+  "Next": "Next",
+  "Submit": "Submit",
+  "Invalid credentials": "Invalid credentials",
+  "Login": "Login",
+  "Username": "Username",
+  "Password": "Password",
+  "We'll show you how to eat, the Akhi Way!": "We'll show you how to eat, the Akhi Way!",
+  "Find halal restaurants near you": "Find halal restaurants near you",
+  "Featured Restaurants": "Featured Restaurants",
+  "Rating": "Rating",
+  "The Akhi Way": "The Akhi Way",
+  "Quick Links": "Quick Links",
+  "Home": "Home",
+  "Restaurants": "Restaurants",
+  "About Us": "About Us",
+  "Account": "Account",
+  "Contact Us": "Contact Us",
+  "Email": "Email",
+  "Phone": "Phone",
+  "Follow Us": "Follow Us",
+  "Dietary restrictions cannot be empty.": "Dietary restrictions cannot be empty.",
+  "Preferred cuisines cannot be empty.": "Preferred cuisines cannot be empty.",
+  "Calorie intake must be a positive number.": "Calorie intake must be a positive number.",
+  "Dietary preferences saved!": "Dietary preferences saved!",
+  "Dietary Preferences": "Dietary Preferences",
+  "Dietary Restrictions": "Dietary Restrictions",
+  "Preferred Cuisines": "Preferred Cuisines",
+  "Calorie Intake": "Calorie Intake",
+  "Save Dietary Preferences": "Save Dietary Preferences",
+  "Saved Preferences": "Saved Preferences",
+  "Back": "Back",
+  "Account Settings": "Account Settings",
+  "Dietary Preferences": "Dietary Preferences",
+  "Meetups": "Meetups",
+  "About Us": "About Us",
+  "Welcome to The Akhi Way! We are passionate about bringing you the best halal dining experiences. Our mission is to connect you with top-notch restaurants that adhere to halal standards.": "Welcome to The Akhi Way! We are passionate about bringing you the best halal dining experiences. Our mission is to connect you with top-notch restaurants that adhere to halal standards.",
+  "Our team is dedicated to ensuring that you have access to a wide variety of halal options, from traditional cuisines to modern dishes. Whether you're planning a family gathering, organizing a meet-up with friends, or simply looking for a great meal, we've got you covered, the Akhi Way.": "Our team is dedicated to ensuring that you have access to a wide variety of halal options, from traditional cuisines to modern dishes. Whether you're planning a family gathering, organizing a meet-up with friends, or simply looking for a great meal, we've got you covered, the Akhi Way."
 }
